# SwiftProPDF

./: .dockerignore  .env.example  .gitignore  DELIVERY_SUMMARY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.clamav  ENHANCEMENTS.md  INDEX.md  QUICKSTART.md  README.md  SETUP.md  VERIFICATION.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-full.txt
.github/workflows/: deploy.yml  docker-deploy.yml  docker-server-setup.yml  server-setup.yml  ssl-setup.yml
.github/workflows/deploy/: nginx.conf  swiftpdf.service
deploy/: calmd.conf  swiftpropdf-worker.service  swiftpropdf.service
migrations/: env.py
migrations/versions/: 20260614_0001_initial_schema.py  20260619_0002_browser_hits.py
scripts/: check_admin_visibility.py  create_test_user.py  fetch_home_after_login.py  inspect_users.py  normalize_roles.py  promote_admin.py  server-setup.sh
src/SwiftPDF/: __init__.py  auth.py  cli.py  core.py  email_otp.py  web.py
src/SwiftPDF/static/: app.js  styles.css
src/SwiftPDF/templates/: about.html  admin.html  base.html  contact.html  faq.html  forgot_password.html  guides.html  home.html  index.html  login.html  login_otp.html  page.html  pricing.html  privacy.html  profile.html  register.html  reset_password.html  terms.html  tool.html  verify_login_otp.html  verify_registration.html
src/SwiftProPDF/: auth.py  cli.py  core.py  database.py  email_otp.py  migrations.py  web.py
src/SwiftProPDF/security/: __init__.py  file_scanner.py
src/SwiftProPDF/static/: robots.txt  sitemap.xml
src/SwiftProPDF/static/css/: styles.css
src/SwiftProPDF/static/js/: app.js
src/SwiftProPDF/templates/account/: profile.html
src/SwiftProPDF/templates/admin/: dashboard.html
src/SwiftProPDF/templates/auth/: forgot_password.html  login.html  login_otp.html  register.html  reset_password.html  verify_login_otp.html  verify_registration.html
src/SwiftProPDF/templates/layouts/: base.html
src/SwiftProPDF/templates/public/: ContactUs.html  about.html  aboutUs.html  contact.html  faq.html  guides.html  home.html  index.html  page.html  pricing.html  privacy.html  terms.html
src/SwiftProPDF/templates/tools/: tool.html
src/SwiftProPDF/tools/: __init__.py  compress_image.py  compress_pdf.py  delete_pdf_pages.py  exceptions.py  generate_qr_code.py  images_to_pdf.py  lock_pdf.py  merge_pdfs.py  office_to_pdf.py  page_ranges.py  pdf_to_excel.py  pdf_to_images.py  pdf_to_powerpoint.py  pdf_to_word.py  rotate_pdf_pages.py  split_pdf.py  unlock_pdf.py
src/SwiftProPDF/web_app/: __init__.py  app.py  celery_app.py  job_events.py  job_runner.py  job_service.py  tasks.py  tool_catalog.py
tests/: conftest.py  test_auth.py  test_browser_hit_tracking.py  test_celery_app.py  test_cli.py  test_core.py  test_file_scanner.py  test_job_service.py  test_login_page.py  test_migrations.py  test_redis.py  test_search_indexing_files.py  test_upload_limits.py
