[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swiftpropdf"
version = "0.1.0"
description = "SwiftProPDF - Fast and secure PDF tools including unlock, split, and merge capabilities."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=3.1",
    "Flask>=3.0.0",
    "pypdf[crypto]>=4.3.0",
    "PyMuPDF>=1.24.0",
    "pdf2docx>=0.5.1",
    "python-pptx>=0.6.21",
    "openpyxl>=3.0.0",
    "pandas>=1.5.0",
    "Pillow>=9.0.0",
    "qrcode>=7.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "psycopg[binary]>=3.1.0",
    "alembic>=1.13.0",
    "clamd>=1.0.2",
]

[project.scripts]
swiftpropdf = "SwiftProPDF.cli:main"
swiftpropdf-ui = "SwiftProPDF.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
SwiftProPDF = [
    "static/css/*.css",
    "static/images/*.jpeg",
    "static/images/*.png",
    "static/images/*.svg",
    "static/js/*.js",
    "templates/account/*.html",
    "templates/admin/*.html",
    "templates/auth/*.html",
    "templates/layouts/*.html",
    "templates/public/*.html",
    "templates/tools/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
